--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -24,121 +24,118 @@
 #  common:
 #    home_netranges_ipv4: &home_netranges_ipv4 []
 #    home_netranges_ipv6: &home_netranges_ipv6 ['::1/128']
-#    portscan_queue: &portscan_queue 'sner_disco syn scan top10000'
+#
+#  # step groups definitions
+#  step_groups:
+#    service_discovery:
+#      - step: enqueue
+#        queue: 'disco syn scan top10000'
+#
+#    service_scanning:
+#      - step: enqueue
+#        queue: 'data version scan basic'
+#      - step: enqueue
+#        queue: 'data jarm scan'
 #
 #  pipelines:
-#    # BASIC: two-phase ipv4/ipv6 scanning
+#    # discovery pipelines
+#    - type: interval
+#      name: discover_ipv4
+#      interval: 120days
+#      steps:
+#        - step: enumerate_ipv4
+#          netranges: *home_netranges_ipv4
+#        - step: run_group
+#          name: service_discovery
+#
+#    - type: interval
+#      name: discover_ipv6_dns
+#      interval: 120days
+#      steps:
+#        - step: enumerate_ipv4
+#          netranges: *home_netranges_ipv4
+#        - step: enqueue
+#          queue: 'disco ipv6 dns discover'
+#
 #    - type: queue
 #      steps:
 #        - step: load_job
-#          queue: 'sner_disco syn scan top10000'
+#          queue: 'disco ipv6 dns discover'
+#        - step: project_hostlist
+#        - step: filter_netranges
+#          netranges: *home_netranges_ipv6
+#        - step: run_group
+#          name: service_discovery
+#        - step: archive_job
+#
+#
+#    # scanning pipelines
+#    - type: queue
+#      steps:
+#        - step: load_job
+#          queue: 'disco syn scan top10000'
 #        - step: filter_tarpits
 #        - step: project_servicelist
-#        - step: enqueue
-#          queue: 'sner_data version scan basic'
-#        - step: enqueue
-#          queue: 'sner_data jarm scan'
+#        - step: run_group
+#          name: service_scanning
 #        - step: archive_job
 #
 #    - type: queue
 #      steps:
 #        - step: load_job
-#          queue: 'sner_data version scan basic'
+#          queue: 'data version scan basic'
 #        - step: import_job
 #        - step: archive_job
 #
 #    - type: queue
 #      steps:
 #        - step: load_job
-#          queue: 'sner_data jarm scan'
-#        - step: import_job
-#        - step: archive_job
-#
-#    # ADVANCED: priority port sweep scan
-#    - type: queue
-#      steps:
-#        - step: load_job
-#          queue: 'sner_sweep ack scan portA'
-#        - step: project_servicelist
-#        - step: enqueue
-#          queue: 'sner_sweep version scan basic'
-#        - step: archive_job
-#
-#    - type: queue
-#      steps:
-#        - step: load_job
-#          queue: 'sner_sweep version scan basic'
-#        - step: import_job
-#        - step: archive_job
-#
-#
-#    # ADVANCED: advanced scanning techniques
-#    - type: queue
-#      steps:
-#        - step: load_job
-#          queue: 'sner_data version scan intense'
+#          queue: 'data script scan basic'
 #        - step: import_job
 #        - step: archive_job
 #
 #    - type: queue
 #      steps:
 #        - step: load_job
-#          queue: 'sner_data script scan basic'
+#          queue: 'data jarm scan'
 #        - step: import_job
 #        - step: archive_job
 #
 #
-#    # ADVANCED: storage rescanning
+#    # storage rescanning pipelines
 #    - type: generic
 #      steps:
 #        - step: rescan_services
 #          interval: '20days'
-#          queue: 'sner_data version scan basic'
+#        - step: run_group
+#          name: service_scanning
 #
-#        - step: rescan_hosts
-#          interval: '60days'
-#          queue: *portscan_queue
-#
-#
-#    # ADVANCED: full netranges rediscovery
 #    - type: generic
 #      steps:
-#        - step: discover_ipv4
-#          interval: '120days'
-#          netranges: *home_netranges_ipv4
-#          queue: *portscan_queue
+#        - step: rescan_hosts
+#          interval: '60days'
+#        - step: run_group
+#          name: service_discovery
 #
-#        - step: discover_ipv6_dns
-#          interval: '120days'
-#          netranges: *home_netranges_ipv4
-#          queue: 'sner_disco ipv6 dns discover'
-#
-#        - step: discover_ipv6_enum
-#          interval: '120days'
-#          queue: 'sner_disco ipv6 enum discover'
+#    - type: interval
+#      name: storage_ipv6_enum
+#      interval: 120days
+#      steps:
+#        - step: storage_ipv6_enum
+#        - step: enqueue
+#          queue: 'disco ipv6 enum discover'
 #
 #    - type: queue
 #      steps:
 #        - step: load_job
-#          queue: 'sner_disco ipv6 dns discover'
+#          queue: 'disco ipv6 enum discover'
 #        - step: project_hostlist
-#        - step: filter_netranges
-#          netranges: *home_netranges_ipv6
-#        - step: enqueue
-#          queue: *portscan_queue
-#        - step: archive_job
-#
-#    - type: queue
-#      steps:
-#        - step: load_job
-#          queue: 'sner_disco ipv6 enum discover'
-#        - step: project_hostlist
-#        - step: enqueue
-#          queue: *portscan_queue
+#        - step: run_group
+#          name: service_discovery
 #        - step: archive_job
 #
 #
-#    # BASIC: maintenance pipeline
+#    # maintenance pipeline
 #    - type: generic
 #      steps:
 #        - step: storage_cleanup
