server: libnmap switch to patched version (user_target_hostname)

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pytest-factoryboy
 pytest-flask
 pytest-httpserver
 pytest-selenium
-python-libnmap
+git+https://github.com/bodik/python-libnmap@devel-usertargetname#egg=python-libnmap
 pytimeparse
 pyyaml
 requests
