--- a/tests/sner.yaml
+++ b/tests/sner.yaml
@@ -1,6 +1,8 @@
 server:
-    secret: 'changeit'
-    db: 'postgresql:///sner_test'
-    var: '/tmp/sner_test_var'
-    application_root: '/'
-    trim_report_cells: 1000
+  application_root: '/'
+  secret_key: 'changeit'
+  sqlalchemy_database_uri: 'postgresql:///sner_test'
+  sner_var: '/tmp/sner_test_var'
+  sner_trim_report_cells: 1000
+
+planner:
