server: add configurable oidc redirect uri, required for production deployments, where server process itself is not aware about reverse proxy

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -23,6 +23,7 @@
 #  oidc_default_metadata: 'https://URL/.well-known/openid-configuration'
 #  oidc_default_client_id: 'dummy'
 #  oidc_default_client_secret: 'dummy'
+#  oidc_default_redirect_uri: 'https://external_hostname/path/auth/login_oidc_callback'
 #
 #
 #agent:
