--- a/extra/sner-server.service
+++ b/extra/sner-server.service
@@ -4,7 +4,12 @@ After=network.target
 
 [Service]
 Environment="SCRIPT_NAME=/sner"
-ExecStart=/opt/sner/venv/bin/gunicorn --bind "127.0.0.1:18001" --timeout 120 "sner.server.app:create_app()"
+ExecStart=/opt/sner/venv/bin/gunicorn \
+	--bind "127.0.0.1:18001" \
+	--timeout 120 \
+	--access-logfile - \
+	--access-logformat 'gunicorn %({x-forwarded-for}i)s %(h)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"' \
+	'sner.server.app:create_app()'
 WorkingDirectory=/opt/sner
 User=www-data
 Group=www-data
