server: planner add standalone queues handler by default
https://github.com/bodik/sner4/issues/25

--- a/sner.yaml.example
+++ b/sner.yaml.example
@@ -72,3 +72,7 @@
 #      schedule: 1hour
 #      host_interval: 60days
 #      service_interval: 20days
+#
+#    load_standalone:
+#      queues:
+#        - dummy1
