server: version info map generation and api initial implementation

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,9 @@
 plugins =
     coverage_conditional_plugin
 
+omit =
+    sner/server/materialized_views.py
+
 [coverage:coverage_conditional_plugin]
 rules =
     "'PYTEST_SLOW' not in os_environ": cover-ignore-if-not-pytestslow
