--- a/requirements.txt
+++ b/requirements.txt
@@ -34,5 +34,5 @@ requests
 schema
 soft-webauthn
 sqlalchemy-datatables
-git+https://github.com/bodik/sqlalchemy-filters@master-forked#egg=sqlalchemy-filters
+git+https://github.com/bodik/sqlalchemy-filters@master-rb3#egg=sqlalchemy-filters
 webtest
