ghactions: update test pipeline
* simplify, reuse install for coverage and lint
* bump action versions

snerstack backport (efb73e4a0eed3ab9b4937af485417d9fac9b07d9)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,12 @@
-name: General CI
+name: Tests
 on: [push, pull_request]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - run: sudo apt-get update
-      - run: sudo sh bin/install.sh
-      - run: . venv/bin/activate && make lint
-
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - run: sudo apt-get update
@@ -30,4 +19,5 @@ jobs:
           sudo -u postgres psql -c "CREATE USER ${USER}"
           mkdir -p /tmp/sner_test_var
       - run: . venv/bin/activate && make coverage
+      - run: . venv/bin/activate && make lint
       - run: . venv/bin/activate && make test-extra
